# LOCS

./: .gitignore  CHANGELOG.md  GUARDPATCH.md  LOCS_CAPABILITY_SCORING.md  LOCS_GRAND_REGISTRY.md  LOCS_REGISTRY.md  LOCS_SESSION_INIT.md  LOCS_SKILL.md  LOCS_VALIDATOR.md  README.md  locs.py  pyproject.toml
LOCS/: DESIGN.md  IMPLEMENTATION_PROMPT.md  SPEC.md  tasks.md
docs/: architecture.md  proposed_enforcement_strategy.md
guardpatch/: .guardpatch.yml  Cargo.toml  DESIGN.md  README.md  tasks.md
guardpatch/crates/guardpatch-audit/: Cargo.toml
guardpatch/crates/guardpatch-audit/src/: lib.rs
guardpatch/crates/guardpatch-cli/: Cargo.toml
guardpatch/crates/guardpatch-cli/src/: main.rs
guardpatch/crates/guardpatch-core/: Cargo.toml
guardpatch/crates/guardpatch-core/src/: lib.rs  risk_score.rs  symbol_registry.rs
guardpatch/crates/guardpatch-lifecycle/: Cargo.toml
guardpatch/crates/guardpatch-lifecycle/src/: evidence.rs  lib.rs  promotion.rs  review.rs  unlock.rs
guardpatch/crates/guardpatch-locs/: Cargo.toml
guardpatch/crates/guardpatch-locs/src/: lib.rs
guardpatch/crates/guardpatch-parse/: Cargo.toml
guardpatch/crates/guardpatch-parse/src/: adapter.rs  lib.rs  markdown.rs  marker.rs  python.rs  typescript.rs
guardpatch/crates/guardpatch-patch/: Cargo.toml
guardpatch/crates/guardpatch-patch/src/: lib.rs  structured.rs
guardpatch/crates/guardpatch-policy/: Cargo.toml
guardpatch/crates/guardpatch-policy/src/: lib.rs
guardpatch/fixtures/locked_lines/: .guardpatch.yml  expected.json  patch.diff
guardpatch/fixtures/locs_protected/: expected.json  patch.diff
guardpatch/fixtures/locs_protected/before/: secure.md
guardpatch/fixtures/locs_weakening/: expected.json  patch.diff
guardpatch/fixtures/locs_weakening/before/: test.md
guardpatch/fixtures/markdown_section/: .guardpatch.yml  expected.json  patch.diff
guardpatch/fixtures/markdown_section/before/: README.md
hooks/: install-hooks.sh  pre-commit
