[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "locs-cli"
version = "1.2.0"
description = "LLM-Optimised Capability Specification CLI"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "LOCS Maintainers"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
locs = "locs:main"

[tool.setuptools]
py-modules = ["locs"]
