[package]
name = "guardpatch-parse"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
guardpatch-policy = { path = "../guardpatch-policy" }
anyhow = { workspace = true }
serde = { workspace = true }
regex = "1.10"
pulldown-cmark = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-python = { workspace = true }
